# Trabalho-2-Geometria-Computacional

./: CMakeLists.txt  README.md  image_compression.cpp  image_compression.h  main.cpp  triangulation.cpp  triangulation.h
